--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 **.ipynb_checkpoints
 __pycache__/
 **pyc
+**.nii
+**.nii.gz
+**.par
+examples/fmri-open-qc-rest-???/sub-*/
+examples/fmri-open-qc-task/sub-*/
